# financial_controller_app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
DTOs/auth/error/: validation_error_schemas.py
DTOs/auth/getter/: get_me_response_schema.py
DTOs/auth/login/: login_responses_schemas.py  login_schemas.py
DTOs/auth/register/: register_reponses_schemas.py  register_schemas.py
DTOs/buisness/planning/: planning_responses_schemas.py  planning_schema.py
DTOs/buisness/transactions/: transactions_reponses_schemas.py  transactions_schema.py
migrations/versions/: 009ba71c6df8_adding_constraint_unique_to_name_column_.py  09a5d519016d_renaming_column_category_from_.py  12a169518e75_adding_composed_constraint_unique_to_.py  1abcc20a9028_adding_updated_by_and_created_by_.py  222f675a9320_adding_soft_delete_to_category_model.py  85a1955be07d_removing_unique_from_column_name_from_.py  bf849a4c4b7a_linking_categories_with_planning_adding_.py  f3b590e20915_adding_soft_delete_strategy_at_tables_.py
models/: user_model.py
models/auth_models/user_models/: user_model.py
models/buisness_models/planning_models/: planning.py
models/buisness_models/transactions_models/: categories.py  transactions.py
routes/auth/: auth_routes.py
routes/business/planning/: planning_routes.py
server/: errors_handllers.py  extensions.py
services/: auth_service.py
services/auth/: auth_service.py
tests/auth/: auth_test.py
tests/business/: buisiness_test.py  planning_test.py
utils/: context_manager.py  error.py  exceptions.py
utils/schemas/: pagination.py
(+13 files in other folders)
