[project]
name = "financeiro-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.11.1",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.4.1",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "flask==3.1.3",
    "flask-bcrypt==1.0.1",
    "flask-jwt-extended==4.7.4",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.5.1",
    "idna==3.18",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "login==0.0.6",
    "markupsafe==3.0.3",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.50",
    "types-click==7.1.8",
    "types-flask==1.1.6",
    "types-jinja2==2.11.9",
    "types-markupsafe==1.1.10",
    "types-werkzeug==1.0.9",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
